--- a/Index.html
+++ b/Index.html
@@ -130,6 +130,7 @@
                                 <span>T</span>
                             </span>
                         </button>
+                        <button><a href="https://skillmintproject.netlify.app/">Github Link</a></button>
                     </div>
                 </div>
             </div>
@@ -165,6 +166,7 @@
                                 <span>S</span>
                             </span>
                         </button>
+                        <button><a href="https://carrerpathexplorer.netlify.app/">Github Link</a></button>
                 </div>
             </div>
         </div>
