--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="hamburger" onclick="OpenB()"><i class="fa-solid fa-bars"></i></div>
         </div>
         <div class="h" id="About">
-            <div class="im"><img src="../24A95A0517-removebg-preview.png" alt=""></div>
+            <div class="im"><img src="24A95A0517-removebg-preview.png" alt=""></div>
             <div class="data">
                 <h1>Hi, I'm Lakshmi Visalakshi</h1>
                 <h2 class="delius-swash-caps-regular">Aspiring Front-End Developer | Passionate Learner</h2>
@@ -59,7 +59,7 @@
                 <div class="line"><span class="dot"></span>
                     <div class="d">
                         <p><i class="fa-brands fa-html5"></i>HTML</p>
-                        <p><i class="fa-brands fa-css"></i>CSS</p>
+                        <p><i class="fa-brands fa-css3-alt"></i>CSS</p>
                         <p><i class="fa-brands fa-js"></i>JavaScript</p>
                     </div>
                 </div> 
@@ -73,7 +73,7 @@
         <h1 style="text-align: center;color: #045B8C;font-size: 40px;margin-top: 80px;" id="Projects">Projects</h1>
         <div class="projects" >
             <div class="project1">
-                <div class="image1"><img src="../SkillMint.jpeg" alt=""></div>
+                <div class="image1"><img src="SkillMint.jpeg" alt=""></div>
                 <div class="content1">
                     <h1 style="text-align: center;padding-top: 10px;">SKILLMINT</h1>
                     <p>SkillMint is a dynamic learning and career-building platform created for learners, mentors, and recruiters. Our goal is to bridge the gap between passion and profession.Our mission is to empower individuals to learn skills they love, grow at their own pace, and connect with the right opportunities that shape their future.</p>
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="project2">
-                <div class="image2"><img src="../image.png" alt=""></div>
+                <div class="image2"><img src="image.png" alt=""></div>
                 <div class="content2">
                     <h1 style="text-align: center;padding-top: 10px;" class="cp">CARRER PATH EXPLORER</h1>
                     <p>Career Path Explorer is a lightweight and interactive career guidance website designed to help students discover and plan their future careers based on their personal interests. Instead of long text forms or quizzes, the user interacts with a visually engaging interface that presents interest-based buttons.</p>
